# netcrave-docker-driver

./: .gitignore  README.md  docker-compose.yml  dotenv.example  pyproject.toml
.github/workflows/: pylint.yml
docker/dnsd/: Dockerfile
docker/fluentd/: Dockerfile
docker/frr/templates/etc/frr/: daemons.jinja2
docker/haproxy/: Dockerfile
docker/haproxy/templates/etc/haproxy/: haproxy.cfg.jinja2
docker/icap/: Dockerfile
docker/ifconfig/: Dockerfile
docker/netcrave/: template.py
docker/netcrave-docker/: Dockerfile
docker/powerdns/: Dockerfile
docker/powerdns/templates/etc/powerdns/: pdns.conf.jinja2
docker/squid/: Dockerfile
docker/squid/templates/etc/: squid.conf.jinja2
etc/systemd/netcrave/: _netcrave.json  docker.json
etc/systemd/system/: _netcrave.service  _netcrave.socket  docker.service  docker.socket
netcrave_compose/: docker-compose.yml
netcrave_compose/docker/acme/: Dockerfile
netcrave_compose/docker/certificatemgr/: Dockerfile
netcrave_compose/docker/davfs/: Dockerfile
netcrave_compose/docker/fluentd/templates/etc/fluent/: fluentd.conf.jinja2
netcrave_compose/docker/frr/: Dockerfile
netcrave_compose/docker/haproxy/: Dockerfile
netcrave_compose/docker/haproxy/templates/etc/haproxy/: haproxy.cfg.jinja2
netcrave_compose/docker/haproxycfg/: Dockerfile
netcrave_compose/docker/ipam/: Dockerfile
netcrave_compose/docker/netcrave/: Dockerfile  template.py
netcrave_compose/docker/netcrave-docker/: Dockerfile
netcrave_compose/docker/powerdns/: Dockerfile
netcrave_compose/docker/powerdns/templates/etc/powerdns/: pdns.conf.jinja2
netcrave_compose/docker/squid/templates/etc/: squid.conf.jinja2
src/netcrave_docker_acme/: __init__.py  acme.py  crypt.py  http.py
src/netcrave_docker_certificatemgr/: __init__.py  ca.py  daemon.py  database.py  dav_mem_backed_handler.py  http.py  service.py
src/netcrave_docker_davfs/: __init__.py  dav.py  dav_mem_backed_handler.py  fs.py  http.py
src/netcrave_docker_dnsd/: __init__.py  daemon.py
src/netcrave_docker_dockerd/: __init__.py  compose.py  daemon.py  driver.py  netcrave_containerd.py  netcrave_docker_config.py  netcrave_dot_env.py  runtime_installer.py  setup_environment.py
src/netcrave_docker_haproxyctl/: __init__.py  daemon.py  haproxy.py
src/netcrave_docker_icap/: __init__.py  daemon.py  http.py
src/netcrave_docker_ifconfig/: __init__.py  http.py  service.py
src/netcrave_docker_ipam/: __init__.py  db.py  http.py  label.py  schema.py  scope.py  service.py  tags.py
src/netcrave_docker_util/: __init__.py  ca.py  cmd.py  crypt.py  docker_plugin_config.py  exception.py  flask.py  http.py  http_handler.py  lazy.py  log.py  ndb.py  netcrave_flask.py  nft.py  processor.py  ssl_context.py
src/netcrave_docker_zmq/: processor.py
