[tool.poetry]
name = "netcrave-docker-driver"
version = "0.1.0"
description = "Improved functionality for Docker for building advanced container environments"
authors = ["Paige Thompson <paige@paige.bio>"]
license = "GPL"
readme = "README.md"
packages = [{ include = "netcrave_docker_certificatemgr", from = "src" },
            { include = "netcrave_docker_dnsd", from = "src" }, 
            { include = "netcrave_docker_haproxyctl", from = "src" }, 
            { include = "netcrave_docker_icap", from = "src" }, 
            { include = "netcrave_docker_ipam", from = "src" }, 
            { include = "netcrave_docker_davfs", from = "src" }, 
            { include = "netcrave_docker_acme", from = "src" }, 
            { include = "netcrave_docker_util", from = "src" }, 
            { include = "netcrave_docker_dockerd", from = "src" }]
include = [{ path = "netcrave_compose", format = ["sdist", "wheel"] }]
[tool.poetry.dependencies]
python = "^3.11"
pyroute2 = "^0.7.9"
haproxyadmin = "^0.2.4"
certbot = "^2.7.4"
ipython = "^8.18.1"
ipaddress = "^1.0.23"
cryptography = "^41.0.7"
pyopenssl = "^23.3.0"
docker = "^6.1.3"
psycopg = "^3.1.14"
python-magic = "^0.4.27"
unshare = "^0.22"
landlock = "^1.0.0.dev4"
chacha20poly1305 = "^0.0.3"
scapy = "^2.5.0"
wheel = "^0.42.0"
prompt-toolkit = "^3.0.43"
docker-compose = "^1.29.2"
pyyaml = "5.3.1"
fs = "^2.4.16"
colorlog = "^6.8.0"
aiofiles = "^23.2.1"
powerdns-client = "^1.0.4"
aiohttp = "^3.9.1"
cgroupspy = "^0.2.2"
aiohttp-wsgi = "^0.10.0"
pyfuse3 = "^3.3.0"
singleton-decorator = "^1.0.0"
jinja2 = "^3.1.2"
netns = "^1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
autoflake = "^2.2.1"
autopep8 = "^2.0.4"
jedi = ">=0.13.0"
json-rpc = ">=1.8.1"
service-factory = ">=0.1.5"
python-lsp-server = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dnsd = "netcrave_docker_dnsd:daemon"
crtmgrd = "netcrave_docker_certificatemgr:daemon"
haproxyctld = "netcrave_docker_haproxyctl:daemon"
icapd = "netcrave_docker_icap:daemon"
ifconfigd = "netcrave_docker_ifconfig:daemon"
ipamd = "netcrave_docker_ipam:daemon"
davfsd = "netcrave_docker_davfs:daemon"
acmed = "netcrave_docker_acme:daemon"
netcrave-docker-environment = "netcrave_docker_dockerd:setup_environment"
netcrave-docker-daemon = "netcrave_docker_dockerd:daemon"
netcrave-docker-install = "netcrave_docker_dockerd:install"

[tool.pylint.messages_control]
errors-only = true
ignored-modules = [
    "pyroute2",
    "netcrave_compose",
    "subprocess"
]

[tool.autopep8]
max_line_length = 79
recursive = true
aggressive = 3
experimental = true

[tool.autoflake]
check = false
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = false
remove-duplicate-keys = true
remove-unused-variables = true
